--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@fastify/cors": "^10.0.2",
+    "@fastify/swagger": "^9.5.0",
+    "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.2.0",
     "@sinclair/typebox": "^0.33.7",
     "env-cmd": "^10.1.0",
@@ -23,6 +25,7 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "prisma": "^6.2.1",
+    "prismabox": "^1.1.24",
     "ts-node": "^10.9.1",
     "typescript": "^5.7.2"
   },
