--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '4.12.0'
-
 services:
   database:
     container_name: vial-backend-b
@@ -12,10 +10,10 @@ services:
       - 5432:5432
   nodeserver:
     container_name: vial-backend-b-api
-    image: node:18.15.0-backend
+    image: node:18-backend
     build:
       context: .
-      dockerfile: Dockerfile.local
+      dockerfile: Dockerfile.backend.local
     command: npm run dev
     volumes:
       - .:/usr/app/
@@ -29,7 +27,7 @@ services:
   frontend:
     platform: linux/amd64
     container_name: vial-frontend-b
-    image: node:18.15.0-frontend
+    image: node:20-frontend
     build:
       context: ./frontend
       dockerfile: ../Dockerfile.frontend.local
