--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.7.2"
   },
   "scripts": {
+    "run:prod": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "migrate": "docker exec -it vial-backend-b-api npx prisma migrate deploy",
     "seed": "docker exec -it vial-backend-b-api npx prisma db seed",
